--- a/desktop video/desktop video/zh-Hans.lproj/Localizable.strings
+++ b/desktop video/desktop video/zh-Hans.lproj/Localizable.strings
@@ -6,8 +6,16 @@
 "SelectFile" = "选择视频或图片";
 "ChangeFile" = "更换视频或图片";
 "CloseWallpaper" = "关闭壁纸";
-"NowPlaying" = "正在播放：";
-"Volume" = "音量：";
+"NowPlaying" = "正在播放: ";
+"Volume" = "音量: ";
 "SyncAllScreens" = "同步当前屏幕状态到所有屏幕";
 "Screen" = "屏幕";
 "UnknownScreen" = "未知屏幕";
+"Language" = "语言";
+"Confirm" = "确认";
+"RestartRequiredTitle" = "需要重启";
+"RestartRequiredMessage" = "语言更改将在下次启动时生效";
+"AboutDesktopVideo" = "关于 Desktop Video";
+"LaunchAtLoginFailed" = "设置开机启动失败";
+"PreferencesTitle" = "偏好设置";
+"Controller" = "桌面壁纸控制器";
