--- a/Desktop Video/desktop video/Localizable.xcstrings
+++ b/Desktop Video/desktop video/Localizable.xcstrings
@@ -1,5 +1,110 @@
 {
+  "Filetoolarge" : {
+    "extractionState" : "manual",
+    "localizations" : {
+      "en" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "File too large"
+        }
+      },
+      "es" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "Archivo demasiado grande"
+        }
+      },
+      "fr" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "Fichier trop volumineux"
+        }
+      },
+      "zh-Hans" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "文件过大"
+        }
+      },
+      "zh-Hant" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "檔案過大"
+        }
+      }
+    }
+  },
+  "size%.2f GBover%.1f GBplayfromdisk" : {
+    "extractionState" : "manual",
+    "localizations" : {
+      "en" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "This file is %1$.2f GB, exceeding the %.1f GB limit. It will play directly from disk."
+        }
+      },
+      "es" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "El archivo tiene %1$.2f GB y supera el límite de %.1f GB. Se reproducirá directamente desde el disco."
+        }
+      },
+      "fr" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "Ce fichier fait %1$.2f Go, au-delà de la limite de %.1f Go. Il sera lu directement depuis le disque."
+        }
+      },
+      "zh-Hans" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "此文件大小为 %1$.2f GB，超过限制的 %.1f GB，将直接从磁盘播放。"
+        }
+      },
+      "zh-Hant" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "此檔案大小為 %1$.2f GB，超過限制的 %.1f GB，將直接從磁碟播放。"
+        }
+      }
+    }
+  },
   "sourceLanguage" : "en",
+  "StartScreensaver" : {
+    "extractionState" : "manual",
+    "localizations" : {
+      "en" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "Start Screensaver"
+        }
+      },
+      "es" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "Iniciar protector de pantalla"
+        }
+      },
+      "fr" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "Lancer l'economiseur d'ecran"
+        }
+      },
+      "zh-Hans" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "启动屏保"
+        }
+      },
+      "zh-Hant" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "啟動螢幕保護程式"
+        }
+      }
+    }
+  },
   "strings" : {
     "「%@」" : {
       "localizations" : {
@@ -307,7 +412,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "还原修改"
+            "value" : "放弃修改"
           }
         },
         "zh-Hant" : {
@@ -377,7 +482,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "当前壁纸设为屏保"
+            "value" : "将当前壁纸设为屏保"
           }
         },
         "zh-Hant" : {
@@ -450,7 +555,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "自动暂停播放"
+            "value" : "自动暂停(省电模式)"
           }
         },
         "zh-Hant" : {
@@ -1300,7 +1405,7 @@
         }
       }
     },
-  "Volume" : {
+    "Volume" : {
       "extractionState" : "manual",
       "localizations" : {
         "en" : {
@@ -1336,45 +1441,40 @@
       }
     }
   },
-    "StartScreensaver" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : { "stringUnit" : { "state" : "translated", "value" : "Start Screensaver" } },
-        "es" : { "stringUnit" : { "state" : "translated", "value" : "Iniciar protector de pantalla" } },
-        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Lancer l'economiseur d'ecran" } },
-        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "启动屏保" } },
-        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "啟動螢幕保護程式" } }
+  "UnknownPath" : {
+    "extractionState" : "manual",
+    "localizations" : {
+      "en" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "Unknown path"
+        }
+      },
+      "es" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "Ruta desconocida"
+        }
+      },
+      "fr" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "Chemin inconnu"
+        }
+      },
+      "zh-Hans" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "未知路径"
+        }
+      },
+      "zh-Hant" : {
+        "stringUnit" : {
+          "state" : "translated",
+          "value" : "未知路徑"
+        }
       }
-    },
-    "Filetoolarge" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : { "stringUnit" : { "state" : "translated", "value" : "File too large" } },
-        "es" : { "stringUnit" : { "state" : "translated", "value" : "Archivo demasiado grande" } },
-        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Fichier trop volumineux" } },
-        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "文件过大" } },
-        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "檔案過大" } }
-      }
-    },
-    "size%.2f GBover%.1f GBplayfromdisk" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : { "stringUnit" : { "state" : "translated", "value" : "This file is %1$.2f GB, exceeding the %.1f GB limit. It will play directly from disk." } },
-        "es" : { "stringUnit" : { "state" : "translated", "value" : "El archivo tiene %1$.2f GB y supera el límite de %.1f GB. Se reproducirá directamente desde el disco." } },
-        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Ce fichier fait %1$.2f Go, au-delà de la limite de %.1f Go. Il sera lu directement depuis le disque." } },
-        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "此文件大小为 %1$.2f GB，超过限制的 %.1f GB，将直接从磁盘播放。" } },
-        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "此檔案大小為 %1$.2f GB，超過限制的 %.1f GB，將直接從磁碟播放。" } }
-      }
-    },
-    "UnknownPath" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : { "stringUnit" : { "state" : "translated", "value" : "Unknown path" } },
-        "es" : { "stringUnit" : { "state" : "translated", "value" : "Ruta desconocida" } },
-        "fr" : { "stringUnit" : { "state" : "translated", "value" : "Chemin inconnu" } },
-        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "未知路径" } },
-        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "未知路徑" } }
-      }
-    },
+    }
+  },
   "version" : "1.0"
 }
