Add global playback mode and power-saving video controls
Introduces a global AppState singleton to manage playback mode, with new options for always play, automatic, power save, and power save plus. Updates SharedWallpaperWindowManager and AppDelegate to respect the selected playback mode, including new logic for overlay occlusion detection using CoreGraphics. Adds playback mode selection to PreferencesView and cleans up related code. Also updates localization and minor logging improvements.

--- a/Desktop Video/desktop video/Localizable.xcstrings
+++ b/Desktop Video/desktop video/Localizable.xcstrings
@@ -1207,7 +1207,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "启动屏保"
+            "value" : "打开屏保"
           }
         }
       }
