--- a/Desktop Vdieo/Desktop Vdieo/Localizable.xcstrings
+++ b/Desktop Vdieo/Desktop Vdieo/Localizable.xcstrings
@@ -1,111 +1,9 @@
 {
-  "Filetoolarge" : {
-    "extractionState" : "manual",
-    "localizations" : {
-      "en" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "File too large"
-        }
-      },
-      "es" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "Archivo demasiado grande"
-        }
-      },
-      "fr" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "Fichier trop volumineux"
-        }
-      },
-      "zh-Hans" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "文件过大"
-        }
-      },
-      "zh-Hant" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "檔案過大"
-        }
-      }
-    }
-  },
-  "size%.2f GBover%.1f GBplayfromdisk" : {
-    "extractionState" : "manual",
-    "localizations" : {
-      "en" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "This file is %1$.2f GB, exceeding the %.1f GB limit. It will play directly from disk."
-        }
-      },
-      "es" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "El archivo tiene %1$.2f GB y supera el límite de %.1f GB. Se reproducirá directamente desde el disco."
-        }
-      },
-      "fr" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "Ce fichier fait %1$.2f Go, au-delà de la limite de %.1f Go. Il sera lu directement depuis le disque."
-        }
-      },
-      "zh-Hans" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "此文件大小为 %1$.2f GB，超过限制的 %.1f GB，将直接从磁盘播放。"
-        }
-      },
-      "zh-Hant" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "此檔案大小為 %1$.2f GB，超過限制的 %.1f GB，將直接從磁碟播放。"
-        }
-      }
-    }
-  },
   "sourceLanguage" : "en",
-  "StartScreensaver" : {
-    "extractionState" : "manual",
-    "localizations" : {
-      "en" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "Start Screensaver"
-        }
-      },
-      "es" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "Iniciar protector de pantalla"
-        }
-      },
-      "fr" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "Lancer l'economiseur d'ecran"
-        }
-      },
-      "zh-Hans" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "启动屏幕保护程序"
-        }
-      },
-      "zh-Hant" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "啟動螢幕保護程式"
-        }
-      }
-    }
-  },
   "strings" : {
+    "?" : {
+
+    },
     "「%@」" : {
       "localizations" : {
         "zh-Hans" : {
@@ -248,6 +146,18 @@
         }
       }
     },
+    "battery" : {
+
+    },
+    "battery_charging" : {
+
+    },
+    "battery_help" : {
+
+    },
+    "battery_percent" : {
+
+    },
     "ChangeFile" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -282,6 +192,9 @@
           }
         }
       }
+    },
+    "charge_limit" : {
+
     },
     "CloseWallpaper" : {
       "extractionState" : "manual",
@@ -388,6 +301,18 @@
         }
       }
     },
+    "current_capacity" : {
+
+    },
+    "custom_controls" : {
+
+    },
+    "custom_help" : {
+
+    },
+    "design_capacity" : {
+
+    },
     "DiscardChange" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -493,6 +418,12 @@
         }
       }
     },
+    "English" : {
+
+    },
+    "exceed_action" : {
+
+    },
     "GB" : {
       "shouldTranslate" : false
     },
@@ -531,6 +462,9 @@
         }
       }
     },
+    "help" : {
+
+    },
     "idlePauseSensitivity" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -566,6 +500,12 @@
         }
       }
     },
+    "keep_unchanged" : {
+
+    },
+    "language" : {
+
+    },
     "Language" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -600,6 +540,9 @@
           }
         }
       }
+    },
+    "launch_at_login" : {
+
     },
     "LaunchAtLogin" : {
       "extractionState" : "manual",
@@ -670,6 +613,9 @@
           }
         }
       }
+    },
+    "max_temperature" : {
+
     },
     "MaxVideoFileSizeGB" : {
       "extractionState" : "manual",
@@ -1371,6 +1317,9 @@
         }
       }
     },
+    "sleep_action" : {
+
+    },
     "StartScreensaver" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1405,6 +1354,18 @@
           }
         }
       }
+    },
+    "startup_display" : {
+
+    },
+    "startup_help" : {
+
+    },
+    "status_bar_style" : {
+
+    },
+    "stop_charging" : {
+
     },
     "StretchToFill" : {
       "extractionState" : "manual",
@@ -1511,6 +1472,9 @@
         }
       }
     },
+    "thermal_protection" : {
+
+    },
     "UnknownScreen" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1616,6 +1580,9 @@
         }
       }
     },
+    "v1.0" : {
+
+    },
     "Volume" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1650,41 +1617,9 @@
           }
         }
       }
-    }
-  },
-  "UnknownPath" : {
-    "extractionState" : "manual",
-    "localizations" : {
-      "en" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "Unknown path"
-        }
-      },
-      "es" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "Ruta desconocida"
-        }
-      },
-      "fr" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "Chemin inconnu"
-        }
-      },
-      "zh-Hans" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "未知路径"
-        }
-      },
-      "zh-Hant" : {
-        "stringUnit" : {
-          "state" : "translated",
-          "value" : "未知路徑"
-        }
-      }
+    },
+    "中文" : {
+
     }
   },
   "version" : "1.0"
